# amongus

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAR-README.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_games.sh  utils.py
AmongUs/: configs.py  constants.py  training.py
among-agents/: README.md  main.py  new_main.py  requirements.txt  setup.py
elo/: deception_elo.py
evaluations/: eval.py  evals_prompts.py  manual_follow_game.py  run_evals.sh  strategy_skill_eval.py
human_trials/: README.md  README_server.md  app.py  config.py  db.py  game.html  game.py  game_state.json  hello_world.py  models.py  oldgame.html  oldserver.py  requirements.txt  requirements_server.txt  run.py  server.py  serverHelpers.py  server_helpers.py  single_game.py
k8s/: batch_job.yaml  devbox.yaml  kaniko-build.yaml
linear-probes/: all_layers_cache_train_eval.py  apollo_probes.ipynb  cache_activations.ipynb  cache_activations.py  configs.py  datasets.py  eval_probes_debug.ipynb  evaluate_linear_probe.py  evaluate_probes.py  evaluate_utils.py  plots.py  post_gen_lying_probe.py  probe_datasets.py  probe_to_model.py  probe_utils.py  probes.py  train_all_probes.py  train_eval_all_probes.py  train_linear_probe.ipynb  train_linear_probe.py  train_probes.py  utils.py
notebooks/: cached-activations.ipynb  duplicates.ipynb  game.ipynb  gpus.ipynb  hf-datasets.ipynb  local-generate-speedtest.ipynb  open-router.ipynb  phi4_comparison_results.json
old_files/: agent.py  game.py  (+2 more)
(+190 files in other folders)
