[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amongus_server"
version = "0.0.0"
description = "Web server and supporting code for the Among Us human trials project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "fastapi",
  "networkx",
  "numpy",
  "python-dotenv",
  "requests",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
legacy = [
  "flask",
  "flask-socketio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"human_trials/models.py" = ["E402"]
"among-agents/amongagents/agent/agent.py" = ["F403", "F405"]
"among-agents/amongagents/envs/configs/experiment_config.py" = ["F403", "F405"]
"among-agents/amongagents/envs/game.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
  "test_*.py",
]
addopts = "-q"
